src/objects/BatchAuditTrail__c.object
<CustomObject>
    <fields>
        <fullName>API_Call_Detail__c</fullName>
        <label>API Call Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Call_Type__c</fullName>
        <label>API Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rest</fullName>
                </value>
                <value>
                    <fullName>WebService</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>API_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>API Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approx_Record_Process__c</fullName>
        <label>Approx Record Process?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Class_Link__c</fullName>
        <label>Batch Class Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Handling__c</fullName>
        <label>Error Handling Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Log</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>System Debug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Execution_Time__c</fullName>
        <label>Estimated Execution Time (In Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>3 Times a day</fullName>
                </value>
                <value>
                    <fullName>4 Times a day</fullName>
                </value>
                <value>
                    <fullName>Called From Apex</fullName>
                </value>
                <value>
                    <fullName>Every 15 Min</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Queueable_call_details__c</fullName>
        <label>Future/Queueable call details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_points__c</fullName>
        <label>Improvement points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoke_From_Batch_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoke From Batch 1</label>
        <referenceTo>BatchAuditTrail__c</referenceTo>
        <relationshipLabel>BatchAuditTrails (Invoke From Batch 1)</relationshipLabel>
        <relationshipName>BatchAuditTrails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoke_From_Batch_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoke From Batch 2</label>
        <referenceTo>BatchAuditTrail__c</referenceTo>
        <relationshipLabel>BatchAuditTrails (Invoke From Batch 2)</relationshipLabel>
        <relationshipName>BatchAuditTrails1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoke_From_Batch_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoke From Batch 3</label>
        <referenceTo>BatchAuditTrail__c</referenceTo>
        <relationshipLabel>BatchAuditTrails (Invoke From Batch 3)</relationshipLabel>
        <relationshipName>BatchAuditTrails2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Changed_by_Sprint__c</fullName>
        <label>Last Changed by Sprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Managed_Package_Standard__c</fullName>
        <label>Managed Package/Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APTTUS - CLM</fullName>
                </value>
                <value>
                    <fullName>APTTUS - CPQ</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Data Trim</fullName>
                </value>
                <value>
                    <fullName>Docusign</fullName>
                </value>
                <value>
                    <fullName>Gainsight</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>Trailhead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Methods_which_invoke_the_batch__c</fullName>
        <label>Methods which invoke the batch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Write__c</fullName>
        <label>Object Write</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objects_Read__c</fullName>
        <label>Objects Read</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BatchAuditTrails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Schedule_Class_Link__c</fullName>
        <label>Schedule Class Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Schedule_Name__c</fullName>
        <label>Schedule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_Type__c</fullName>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Run from another Batch</fullName>
                </value>
                <value>
                    <fullName>Not scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Day__c</fullName>
        <label>Scheduled Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_Email_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Email Call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>CDA</fullName>
                </value>
                <value>
                    <fullName>PSA</fullName>
                </value>
                <value>
                    <fullName>CLM</fullName>
                </value>
                <value>
                    <fullName>OWF</fullName>
                </value>
                <value>
                    <fullName>DEVOPS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Metadata Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Audit Trails</pluralLabel>
    <recordTypes>
        <fullName>BatchAuditTrail</fullName>
        <active>true</active>
        <label>BatchAuditTrail</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Batch_VR1_CRM_Frequency_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
ISPICKVAL(Schedule_Type__c, &apos;Scheduled&apos;),
ISBLANK(TEXT(Frequency__c )))</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>Frequency is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Batch_VR2_CRM_Schedule_Day_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
ISPICKVAL(Frequency__c, &apos;Weekly&apos;),
ISBLANK(Scheduled_Day__c ))</errorConditionFormula>
        <errorDisplayField>Scheduled_Day__c</errorDisplayField>
        <errorMessage>Schedule Day is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Batch_VR3_CRM_Last_Changed_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
NOT(ISNEW()),
OR(
ISCHANGED( API_Call__c ),
ISCHANGED( API_Call_Detail__c ),
ISCHANGED( API_Call_Type__c ),
ISCHANGED( Approx_Record_Process__c ),
ISCHANGED( Batch_Class_Link__c ),
ISCHANGED( Name ),
ISCHANGED( Batch_Size__c ),
ISCHANGED( Description__c ),
ISCHANGED( Error_Handling__c ),
ISCHANGED( Estimated_Execution_Time__c ),
ISCHANGED( Frequency__c ),
ISCHANGED( Future_Queueable_call_details__c ),
ISCHANGED( Improvement_points__c ),
ISCHANGED( Invoke_From_Batch_1__c ),
ISCHANGED(  Invoke_From_Batch_2__c ),
ISCHANGED(  Invoke_From_Batch_3__c ),
ISCHANGED(  Invoke_From_Batch_4__c ),
ISCHANGED(  Managed_Package_Standard__c ),
ISCHANGED(  Methods_which_invoke_the_batch__c ),
ISCHANGED(  Objects_Read__c ),
ISCHANGED(  Object_Write__c ),
ISCHANGED(  Running_User__c ),
ISCHANGED(  Schedule_Class_Link__c ),
ISCHANGED(  Scheduled_Day__c ),
ISCHANGED( Schedule_Name__c ),
ISCHANGED( Schedule_Type__c ),
ISCHANGED(  Single_Email_Call__c ),
ISCHANGED(  Track__c )),

ISBLANK( Last_Changed_by_Sprint__c ))</errorConditionFormula>
        <errorDisplayField>Last_Changed_by_Sprint__c</errorDisplayField>
        <errorMessage>Last Changed by Sprint is required.</errorMessage>
    </validationRules>
</CustomObject>